tests/transpiler/x/swift/json_builtin.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/028/main.swift:3:1: error: cannot find 'json' in scope
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:12 GMT+7
2 | let m = ["a": 1, "b": 2]
3 | json(m)
  | `- error: cannot find 'json' in scope
4 | 
