tests/transpiler/x/swift/json_builtin.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:12 GMT+7
let m = ["a": 1, "b": 2]
json(m)
